--- a/web-developer.html
+++ b/web-developer.html
@@ -170,7 +170,7 @@ with any of these technologies: flask /django, postgres/mysql, react/vuejs, css3
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://westphalia-datalab.join.com/jobs/260979-web-developer-w-m-d'>Job @ Westphalia DataLab (M?nster): Web Developer... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://westphalia-datalab.join.com/jobs/260979-web-developer-w-m-d'>Job @ Westphalia DataLab (M?nster): Web Developer... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>vor 4 Tagen ... Westphalia DataLab GmbH has a job opening for Web Developer (w/m/d) in 
 M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p>
@@ -187,7 +187,7 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/WJCompany/743999692248860-java-web-developer-operation'>Woongjin, Inc Java Web Developer & Operation | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/WJCompany/743999692248860-java-web-developer-operation'>Woongjin, Inc Java Web Developer & Operation | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -199,7 +199,7 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692237210-web-developer-e-commerce-marketing-m-w-d-'>Publicis Groupe Web Developer E-Commerce &amp; Marketing (m/w/d) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692237210-web-developer-e-commerce-marketing-m-w-d-'>Publicis Groupe Web Developer E-Commerce &amp; Marketing (m/w/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -217,7 +217,7 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/EASYRECRUE/743999692221480-web-developer'>EASYRECRUE Web Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/EASYRECRUE/743999692221480-web-developer'>EASYRECRUE Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -302,7 +302,7 @@ Rails) to stabilize and expand our AI platform. AIcrowd (www.aicrowd.com) is a?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/mozilla/jobs/1788488'>Job Application for Senior Full Stack Web Developer at Mozilla</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mozilla/jobs/1788488'>Job Application for Senior Full Stack Web Developer at Mozilla</a></h5> 
 <p><span class="badge badge-light">San Francisco Mountain View Vancouver Toronto London Paris Berlin Denver Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -343,7 +343,7 @@ a full team of technology professionals to take projects from design specs to?..
 Responsibilities: Implement a next-generation user interface using latest 
 technologies?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/csajobs/job/oU9zafww'>Community Services of America Careers - Full Stack Web Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/csajobs/job/oU9zafww'>Community Services of America Careers - Full Stack Web Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Join a stable, growing business with more than 50 years of sustained success. As 
 a   Full Stack Developer   for Saint Benedict Press, you will collaborate on,?...</p>
@@ -373,7 +373,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light">Mountain View California</span></p>
 <p>Posted on:: 2019-07-22</p>
 <hr/>
-<h5><a href='http://onit.applytojob.com/apply/ZjF3IHxzaL/Web-Application-Developer'>Web Application Developer - Onit - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://onit.applytojob.com/apply/ZjF3IHxzaL/Web-Application-Developer'>Web Application Developer - Onit - Career Page</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -383,7 +383,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light">Stockholm, Sweden</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bixal/70aca1df-d3cf-452b-a38b-02a2dc9ae005'>Bixal - Drupal Web Developer (Mid to Senior Level)</a></h5> 
+<h5><a href='https://jobs.lever.co/bixal/70aca1df-d3cf-452b-a38b-02a2dc9ae005'>Bixal - Drupal Web Developer (Mid to Senior Level)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -413,7 +413,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light">Tampa, FL</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/stars-group/job/oG9yafwh'>The Stars Group Careers - Junior Front End Web Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/stars-group/job/oG9yafwh'>The Stars Group Careers - Junior Front End Web Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... The role: Junior Front End Web Developer. We are looking for a Junior Front End 
 Web Developer to join our busy and dynamic team based in our Dublin service?...</p>
